# apps/api/alembic/versions/78f1bb3a98b0_цена_клика_и_конверсия_сайта.py
@@ -1,0 +1,32 @@
+"""цена клика и конверсия сайта
+
+Revision ID: 78f1bb3a98b0
+Revises: fe5f0a5313c8
+Create Date: 2026-08-15 23:19:54.871380
+"""
+
+from __future__ import annotations
+
+from collections.abc import Sequence
+
+import sqlalchemy as sa
+from alembic import op
+
+revision: str = '78f1bb3a98b0'
+down_revision: str | None = 'fe5f0a5313c8'
+branch_labels: str | Sequence[str] | None = None
+depends_on: str | Sequence[str] | None = None
+
+
+def upgrade() -> None:
+    # ### commands auto generated by Alembic - please adjust! ###
+    op.add_column('project_economics', sa.Column('expected_cpc', sa.Numeric(precision=10, scale=2), nullable=True))
+    op.add_column('project_economics', sa.Column('site_conversion_rate', sa.Numeric(precision=6, scale=4), nullable=True))
+    # ### end Alembic commands ###
+
+
+def downgrade() -> None:
+    # ### commands auto generated by Alembic - please adjust! ###
+    op.drop_column('project_economics', 'site_conversion_rate')
+    op.drop_column('project_economics', 'expected_cpc')
+    # ### end Alembic commands ###
